--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "opn": "^5.1.0"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "nodemon": "^1.11.0"
   },
   "scripts": {
+    "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "nodemon": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC"
