--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "express": "^4.15.4",
-    "opn": "^5.1.0"
+    "materialize-css": "^0.100.1",
+    "opn": "^5.1.0",
+    "save": "^2.3.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
