--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "bower": "^1.8.0",
     "express": "^4.15.4",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^3.0.0",
     "materialize-css": "^0.100.1",
     "opn": "^5.1.0",
     "save": "^2.3.1"
